[tool.poetry]
name = "raebot"
version = "0.1.0"
description = "A library that fetches definitions from the DLE"
authors = ["Weiwei Wang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
